feat(frontend): Add Frame component for blog post images

--- a/frontend/src/pages/Blog/posts/v0.3.0.mdx
+++ b/frontend/src/pages/Blog/posts/v0.3.0.mdx
@@ -1,12 +1,15 @@
-import { Video, Link } from "@/pages/Blog/common";
+import { Video, Link, Frame } from "@/pages/Blog/common";
 
-# Notas da versão v0.3.0 🎉
 
 <div align="center">
+
+# Notas da versão v0.3.0 🎉
 
 ![image](https://github.com/user-attachments/assets/b9b45c87-116b-42a3-9dca-08ab05ac8fe7)
 
 </div>
+
+<br />
 
 Agora, é ainda mais fácil e conveniente para seus clientes fazerem pedidos através do seu menu digital.
 
@@ -14,10 +17,24 @@ Com essa nova funcionalidade, os usuários podem adicionar itens ao carrinho, vi
 
 <Video src="https://github.com/user-attachments/assets/d34bdfdb-7fab-4e6a-9091-15d6a01463dd" />
 
+<br />
+
+Não deixe de configurar seu número de telefone no painel de controle e comece a receber pedidos diretamente no WhatsApp.
+
+<Frame>![image](https://github.com/user-attachments/assets/5a2776ba-56a8-46e2-9f26-95569dc709ae)</Frame>
+
 ## O que há de novo?
 
 -   **Carrinho de Compras**: Adicione itens ao carrinho de forma fácil e rápida.
 -   **Cálculo Automático do Total**: Visualize o valor total do pedido à medida que os itens são adicionados.
 -   **Envio Direto para o WhatsApp**: Finalize o pedido e envie diretamente para o WhatsApp, facilitando a comunicação e o atendimento.
 
-<Link href="https://github.com/4lysson-a/visualizaai/compare/v0.2.0...v0.3.0">**Acompanhe nosso desenvolvimento completo por aqui**</Link>
+
+
+<br />
+<br />
+
+<Link href="https://github.com/4lysson-a/visualizaai/compare/v0.2.0...v0.3.0">
+    **Acompanhe nosso desenvolvimento completo por aqui**
+</Link>
+
