feat(frontend): Add new blog post v0.3.6 with category improvements

--- a/frontend/src/pages/Blog/posts/v0.3.0.mdx
+++ b/frontend/src/pages/Blog/posts/v0.3.0.mdx
@@ -1,8 +1,8 @@
-import { Video, Link, Frame } from "@/pages/Blog/common";
+import { Video, Link, Frame, Badge } from "@/pages/Blog/common";
+
+<Badge text="Notas da versão v0.3.0" />
 
 <div align="center">
-
-# Notas da versão v0.3.0 🎉
 
 ![image](https://github.com/user-attachments/assets/b9b45c87-116b-42a3-9dca-08ab05ac8fe7)
 
