feat(frontend): Add image to blog post v0.3.6 for better visualization

--- a/frontend/src/pages/Blog/posts/v0.3.6.mdx
+++ b/frontend/src/pages/Blog/posts/v0.3.6.mdx
@@ -1,7 +1,14 @@
 import { Video, Link, Frame, Badge, Title } from "@/pages/Blog/common";
 
-<Badge className="mb-[-20px]" text="Notas da versão v0.3.6" />
-<Title text="Categorizar nunca foi tão fácil! 🥳" />
+<Badge text="Notas da versão v0.3.6" />
+
+<div align="center">
+
+![image](https://github.com/user-attachments/assets/29f5504b-ec51-4eea-b62c-06b3a2f57350)
+
+</div>
+
+<br />
 
 Agora, você pode organizar seus itens de forma mais prática e intuitiva, facilitando a visualização e a escolha dos seus clientes.
 
